<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/msg_login_to_vote"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"/>

        <EditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"/>

        <EditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_login"/>

    </LinearLayout>

</RelativeLayout>