<RelativeLayout
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_group">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/project_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/project_icon"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/app_name"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/project_icon"
                    android:textSize="24sp"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/name"
                    android:textSize="18sp"
                    android:textColor="#222"/>

                <ImageView
                    android:id="@+id/team_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/team"
                    android:contentDescription="@string/app_name"
                    android:layout_below="@+id/team"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/members"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/team_icon"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#000"/>

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/button_vote">

            <TextView
                android:id="@+id/button_source_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="#3AB0E2"
                android:textColor="#fff"
                android:text="@string/label_source_code"/>

            <TextView
                android:id="@+id/button_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="#1E9E6B"
                android:textColor="#fff"
                android:text="@string/label_website"/>

        </LinearLayout>

        <TextView
            android:id="@+id/button_vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#E96656"
            android:textColor="#fff"
            android:text="@string/label_vote_this_project"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sorry"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:text="@string/err_general"/>

        <Button
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/label_try_again"/>

    </LinearLayout>

</RelativeLayout>